# SyncMechanism

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.console/: backlog.md  guidelines.md  log.md  task.md
.custodian/: config.yaml
.github/workflows/: ci.yml
examples/: sync-binding.example.yaml  sync-spec.yaml
sync_mechanism/: __main__.py  install_cli.py  main.py  spec_cli.py  startup_cli.py
sync_mechanism/spec/: __init__.py  coverage.py  loader.py  models.py  modes.py
syncthing/: install.ps1  install.py  install.sh  requirements.txt  tray.ps1  tray.py  tray.sh
tests/: conftest.py  test_install.py  test_shims.py  test_startup.py  test_tray.py
tests/spec/: test_coverage.py  test_loader.py  test_models.py  test_modes.py
